log
ju.,  5 de may. de 2022 23:16:07: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function 'createHeap':
heap.c:37:20: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
    heap->heapArray = (Heap *) calloc(3, sizeof(heapElem));
                    ^
cc1.exe: all warnings being treated as errors
Compilation failed
1631ee6
ju.,  5 de may. de 2022 23:16:41: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
97f10b5
ju.,  5 de may. de 2022 23:20:25: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
b0b91ef
ju.,  5 de may. de 2022 23:21:04: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|2
total_score: 20/70
75bf050
ju.,  5 de may. de 2022 23:29:36: 
 heap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:29:21: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
       pq->heapArray = (Heap *) realloc(pq->heapArray, (pq->capac * 2) + 1);
                     ^
heap.c: In function 'createHeap':
heap.c:44:35: error: too many arguments to function 'malloc'
    heap->heapArray = (heapElem *) malloc(3, sizeof(heapElem));
                                   ^~~~~~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:485:40: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  void *malloc (size_t) __MINGW_ATTRIB_MALLOC;
                                        ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0c92005
ju.,  5 de may. de 2022 23:29:46: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:29:21: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
       pq->heapArray = (Heap *) realloc(pq->heapArray, (pq->capac * 2) + 1);
                     ^
cc1.exe: all warnings being treated as errors
Compilation failed
f100034
ju.,  5 de may. de 2022 23:30:11: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
8681247
ju.,  5 de may. de 2022 23:43:18: 
 heap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  5|2
50153de
ju.,  5 de may. de 2022 23:45:16: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|0
total_score: 35/70
dcc69b2
ju.,  5 de may. de 2022 23:50:11: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
3f4b313
ju.,  5 de may. de 2022 23:57:26: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  6|0
8f50b8b
vi.,  6 de may. de 2022  0:08:27: 
 heap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:38:13: error: unused variable 'tmp' [-Werror=unused-variable]
    heapElem tmp;
             ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
33d7e0f
vi.,  6 de may. de 2022  0:09:10: 
 heap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
total_score: 35/70
5583fea
vi.,  6 de may. de 2022  0:10:20: 
 heap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|2
d962d1c
vi.,  6 de may. de 2022  0:12:55: 
 heap.c | 17 ++++++-----------
 1 file changed, 6 insertions(+), 11 deletions(-)
 tests:  0|2
total_score: 35/70
5305ddc
vi.,  6 de may. de 2022  0:15:48: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'createHeap':
heap.c:58:35: error: too few arguments to function 'calloc'
    heap->heapArray = (heapElem *) calloc(3 * sizeof(heapElem));
                                   ^~~~~~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:484:40: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  void *calloc (size_t, size_t) __MINGW_ATTRIB_MALLOC;
                                        ^~~~~~
Compilation failed
ff66ec7
vi.,  6 de may. de 2022  0:16:02: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
651f017
vi.,  6 de may. de 2022 11:10:15: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 35/70
0867933
vi.,  6 de may. de 2022 11:28:14: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|2
81e39ba
vi.,  6 de may. de 2022 11:28:45: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 35/70
4a5a9ce
vi.,  6 de may. de 2022 11:30:52: 
 heap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  0|0
7341c15
vi.,  6 de may. de 2022 11:37:28: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:41:7: error: invalid type argument of unary '*' (have 'heapElem {aka struct nodo}')
       *tmp = pq->heapArray[aux];
       ^~~~
heap.c:43:36: error: invalid type argument of unary '*' (have 'heapElem {aka struct nodo}')
       pq->heapArray[(aux - 1)/2] = *tmp;
                                    ^~~~
Compilation failed
839c234
vi.,  6 de may. de 2022 11:37:50: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|0
8e23a60
vi.,  6 de may. de 2022 11:41:00: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:39:5: error: implicit declaration of function 'view_array' [-Werror=implicit-function-declaration]
     view_array(pq);
     ^~~~~~~~~~
test.c: At top level:
test.c:55:6: error: conflicting types for 'view_array' [-Werror]
 void view_array(Heap* h){
      ^~~~~~~~~~
In file included from test.c:4:0:
heap.c:39:5: note: previous implicit declaration of 'view_array' was here
     view_array(pq);
     ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
80f0f9f
vi.,  6 de may. de 2022 11:47:49: 
 heap.c | 15 ++++++++++-----
 1 file changed, 10 insertions(+), 5 deletions(-)
 tests:  0|0
total_score: 35/70
324cfed
vi.,  6 de may. de 2022 11:55:17: 
 heap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
test.c:55:6: error: redefinition of 'view_array'
 void view_array(Heap* h){
      ^~~~~~~~~~
In file included from test.c:4:0:
heap.c:26:6: note: previous definition of 'view_array' was here
 void view_array(Heap* h){
      ^~~~~~~~~~
Compilation failed
8610afa
vi.,  6 de may. de 2022 11:55:34: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|2
total_score: 35/70
3435102
vi.,  6 de may. de 2022 12:01:51: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
db0cfda
vi.,  6 de may. de 2022 12:02:36: 
 heap.c | 9 ---------
 1 file changed, 9 deletions(-)
 tests:  7|1
total_score: 45/70
b3c09ea
sá.,  7 de may. de 2022 13:51:34: 
 heap.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
 tests:  7|1
total_score: 45/70
6f2af18
sá.,  7 de may. de 2022 13:55:51: 
 heap.c | 20 ++++++++++----------
 1 file changed, 10 insertions(+), 10 deletions(-)
 tests:  7|1
total_score: 60/70
94e6c4e
